k8s/kustomize-bases/gitopsapp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitopsapp
spec:
  selector:
    deployment: gitopsapp
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
