k8s/kustomize-bases/gitopsapp/ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitopsapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: demo.stg-gke.gitops.gcp.rael.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gitopsapp
          servicePort: http
